rectification code général

--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -2,9 +2,9 @@
 
 body{
     background-color: #000;
-    display: flex;
+    /*display: flex;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 100vh;*/
 }
 
 /* HEADER */
