--- a/ressources/css/contact.css
+++ b/ressources/css/contact.css
@@ -19,7 +19,7 @@
     content: " ";
     margin: 0 auto;
     margin-top: 10px;
-}
+}/*
 .card{
     background-color: #5D6D7E;
     padding: 30px;
@@ -47,4 +47,74 @@ textarea{
 }
 .container h5{
     text-align: center;
+}*/
+
+.contact{
+    justify-content: center;
+    padding: 80px;
+}
+.contact .card{
+    margin: 0 auto;
+    border: 5px solid transparent;
+    box-shadow: 0 0 50px rgb(114, 202, 114);
+    border-radius: 80px;
+    width: 400px;
+    height: 700px;
+    padding: 40px;
+    background-image: url(../images/forest.jpg);
+    background-size: cover;
+}
+.contact h5{
+    text-transform: uppercase;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+.contact span{
+    color: lawngreen;
+}
+.contact label, input, textarea{
+    margin-bottom: 15px;
+    display: block;
+    margin: auto;
+    border-radius: 10px;
+}
+.contact label{
+    color: #fff;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.contact input{
+    border: 5px solid #116655;
+    padding: 5px 35px;
+}
+.contact input:focus{
+    background-color: rgb(140, 243, 166);
+}
+.contact textarea{
+    border: 5px solid #116655;
+    padding: 15px 35px;
+    margin-bottom: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.contact textarea:focus{
+    background-color: rgb(140, 243, 166);
+}
+.contact button{
+    display: block;
+    border: 2px solid #116655;
+    border-radius: 5px;
+    color: #116655;
+    background-color: #fff;
+    padding: 5px;
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.contact button:hover{
+    border: 3px solid #fff;
+    color: #fff;
+    background-color: #116655;
+    padding: 5px 65px;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
 }
